[project]
name = "nonlineartimeseriesanalysisandmanifoldlearning"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "FUJISHIGE TEMMA", email = "tenma.x0@gmail.com" }]
dependencies = [
    "numpy>=1.26.4",
    "plotly>=5.22.0",
    "polars>=0.20.31",
    "nbformat>=5.10.4",
    "scipy>=1.13.1",
    "pyedm>=2.0.2",
    "pyarrow>=16.1.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipykernel>=6.29.4",
    "ipywidgets>=8.1.3",
    "pip>=24.0",
    "setuptools>=70.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/nonlineartimeseriesanalysisandmanifoldlearning"]
